--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,5 @@
 @charset "UTF-8";
 
-$regular: 'Roboto', sans-serif;
-$condensed: 'Roboto Condensed', sans-serif;
-$red: #e03e2f;
-$black: #1d1d1b;
-
 html,
 body {
   margin: 0;
@@ -27,9 +22,9 @@ body {
 }
 
 #es-mixa.es-mixa {
-  font-family: $regular;
+  font-family: "Montserrat", sans-serif;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.2;
   max-width: 998px;
   margin: 0 auto;
@@ -46,7 +41,7 @@ body {
   h3,
   h4,
   h5 {
-    font-family: $regular;
+    font-family: "Montserrat", sans-serif;
     color: #000;
   }
 
@@ -218,7 +213,7 @@ body {
       @include text;
       padding: 16px;
       text-align: center;
-      font-weight: 500;
+      font-weight: 700;
       text-transform: uppercase;
     }
     &__text {
@@ -267,7 +262,7 @@ body {
       @include text;
       color: #023656;
       text-transform: uppercase;
-      font-weight: 500;
+      font-weight: 700;
       text-align: center;
       margin-bottom: 16px;
       &--last {
@@ -281,7 +276,7 @@ body {
       transition: all 0.6s;
       span {
         font-size: 23px;
-        font-weight: 500;
+        font-weight: 700;
       }
       &:hover {
         transform: scale(1.05);
@@ -425,7 +420,7 @@ body {
       @include text;
       display: inline-block;
       color: #fff;
-      background: #f08667;
+      background: #0761a9;
       padding: 10px 32px;
       text-decoration: none;
       text-transform: uppercase;
@@ -433,7 +428,7 @@ body {
       border-radius: 8px;
       transition: all 0.3s;
       &:hover {
-        background: #f39e85;
+        background: #0084d3;
       }
     }
   }
