--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,7 +21,7 @@ body {
   margin: 0 auto;
 }
 
-#es-mixa.es-mixa {
+#es-rc #es-rc-content {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -46,7 +46,7 @@ body {
   }
 
   .es-kv {
-    margin-bottom: 32px;
+    margin-bottom: 64px;
     &__img {
       @include img;
       &--plus {
@@ -55,6 +55,11 @@ body {
         left: -140px;
         z-index: -1;
         transform: translateY(-48%);
+      }
+      &--photo {
+        object-fit: cover;
+        margin: 0;
+        width: 100%;
       }
     }
     &__logo {
@@ -69,19 +74,31 @@ body {
       position: relative;
       margin: 0 auto;
     }
+    &__content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
     &__title {
       @include text;
       bottom: 20px;
       right: 20px;
       position: absolute;
       text-align: right;
-      color: #fff;
+      color: #064f89;
+      text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.95);
       font-size: 23px;
       font-weight: 300;
+      @media (min-width: 450px) {
+        top: 20px;
+        color: #064f89;
+      }
     }
+
     &__wrapper {
       padding: 16px;
     }
+
     &__packshot {
       padding-top: 20px;
       position: relative;
@@ -94,6 +111,7 @@ body {
 
     &__name {
       @include text;
+      background: #0084d3;
       color: #fff;
       text-align: center;
       font-size: 30px;
@@ -122,18 +140,18 @@ body {
       padding-left: 16px;
     }
     &__texts {
+      :nth-child(2),
       :nth-child(3),
       :nth-child(4) {
         &::before {
-          content: '+ ';
+          content: "+ ";
           position: absolute;
-          left: 0;
+          margin-left: -20px;
         }
       }
     }
     &__label {
       @include text;
-      background: #0084d3;
     }
     &__disc {
       @include text;
@@ -143,7 +161,7 @@ body {
   }
 
   .es-benefits {
-    margin-bottom: 32px;
+    margin-bottom: 64px;
     &__img {
       @include img;
       &--image {
@@ -176,7 +194,7 @@ body {
   }
 
   .es-features {
-    margin-bottom: 32px;
+    margin-bottom: 64px;
     &__img {
       @include img;
     }
@@ -226,7 +244,7 @@ body {
   }
 
   .es-info {
-    margin-bottom: 32px;
+    margin-bottom: 64px;
     &:hover {
       .es-info__img--image {
         transform: scale(1.05);
@@ -250,7 +268,7 @@ body {
       margin-bottom: 32px;
     }
     &__content {
-      background: url('images/bg-info.png');
+      background: url("../images/bg-info.png");
       background-size: cover;
       padding: 16px 0;
     }
@@ -291,7 +309,7 @@ body {
   }
 
   .es-formula {
-    margin-bottom: 32px;
+    margin-bottom: 64px;
     &__img {
       @include img;
     }
@@ -326,20 +344,33 @@ body {
       position: relative;
       margin-bottom: 24px;
     }
+    &__overlay {
+      position: absolute;
+      width: 90%;
+      height: 30%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0, 132, 211, 1);
+      mix-blend-mode: multiply;
+      min-width: 250px;
+      z-index: 1;
+    }
     &__label {
       @include text;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(0, 132, 211, 0.8);
+
       padding: 32px 16px;
       min-width: 250px;
       color: #fff;
-      font-size: 32px;
+      font-size: 29px;
       font-weight: 700;
       text-transform: uppercase;
       text-align: center;
+      z-index: 2;
       &--big {
         width: 275px;
       }
@@ -351,7 +382,7 @@ body {
   }
 
   .es-cross {
-    margin-bottom: 32px;
+    margin-bottom: 64px;
     &__img {
       @include img;
     }
@@ -433,25 +464,8 @@ body {
     }
   }
 
-  .es-video {
-    position: relative;
-    &__container {
-      position: relative;
-      padding-bottom: 56.25%;
-      height: 0;
-    }
-    &__iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-    }
-  }
-
   .es-reviews {
-    padding-bottom: 32px;
+    padding-bottom: 64px;
     &__img {
       @include img;
       &--stars {
@@ -472,7 +486,7 @@ body {
     .swiper-button-next,
     .swiper-button-prev {
       &:after {
-        content: '';
+        content: "";
       }
     }
     .swiper {
@@ -551,9 +565,7 @@ body {
         }
       }
       &__content {
-        flex: 1;
-        padding: 0 40px;
-        padding-bottom: 20px;
+        justify-content: space-between;
       }
       &__packshot {
         margin-right: -32px;
@@ -566,6 +578,10 @@ body {
       &__texts {
         position: relative;
         z-index: 1;
+      }
+      &__bottom {
+        margin-block: 32px;
+        width: 90%;
       }
     }
 
@@ -632,7 +648,6 @@ body {
     .es-info {
       &__container {
         display: flex;
-        // align-items: center;
       }
       &__content {
         padding: 48px 40px 48px 0;
@@ -684,10 +699,6 @@ body {
       }
     }
 
-    .es-video {
-      margin-bottom: 64px;
-    }
-
     .es-reviews {
       &__quote {
         padding-top: 56px;
@@ -698,7 +709,7 @@ body {
         max-width: 608px;
       }
       &__wrapper {
-        background: url('images/photo-opinions.png') no-repeat;
+        background: url("../images/photo-opinions.png") no-repeat;
         background-position: top right;
       }
     }
