fix: update all packshots for the serum

--- a/styles/style.css
+++ b/styles/style.css
@@ -781,7 +781,7 @@ body {
     max-width: 608px;
   }
   #es-rc #es-rc-content .es-reviews__wrapper {
-    background: url("../images/photo-opinions.png") no-repeat;
+    background: url("../images/photo-opinions.jpg") no-repeat;
     background-position: top right;
   }
 }
