--- a/styles/style.scss
+++ b/styles/style.scss
@@ -709,7 +709,7 @@ body {
         max-width: 608px;
       }
       &__wrapper {
-        background: url("../images/photo-opinions.png") no-repeat;
+        background: url("../images/photo-opinions.jpg") no-repeat;
         background-position: top right;
       }
     }
